# mayapramana

./: .gitignore  CLAUDE.md  GEMINI.md  applications.org  architecture.org  conventions.org  curriculum.org  manifesto.org  pyproject.toml  system.md
agents/phantom-faculty/: construction.md  feynman.md  landau.md  susskind.md  thorne.md
collab/: phantom-faculty-everyone-a-student.org  phantom-faculty-v1-five-voices.org
collab/sessions/: 2026-02-26.org
collab/sessions/uqsc-proto/: prototype.org
lessons/00-bloch-equations/: chalkboard_bloch_terms.py  chalkboard_magnetometer.py  chalkboard_precession_cone.py  chalkboard_relaxation.py  chalkboard_setup.py  concept-feynman.org  concept.org  illustrate.org  illustrate.py
lessons/00-bloch-equations/cadenzas/: bloch-sphere-geometry-construction.org  bloch-sphere-geometry-feynman.org  bloch-sphere-geometry-landau.org  bloch-sphere-geometry-susskind.org  bloch-sphere-geometry-thorne.org
python/mayapramana/: __init__.py
python/mayapramana/chalkboard/: __init__.py  board.py  chalk.py
scripts/: AGENT_UTILS.org  sanitize-for-agent.py
site/: index.html
