[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mayapramana"
version = "0.1.0"
description = "Universal quantum sensor controller — digital twins of quantum sensors."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["python"]
